--- a/QuoteIndex.html
+++ b/QuoteIndex.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Lily+Script+One|Lato|Playfair+Display:900|Cherry+Swash" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Glegoo" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="QuoteStyle.css">
@@ -20,6 +20,7 @@
 
         <div id="quoteText">
             <i class="fas fa-quote-left"></i>
+           
             <p id="quote"></p>
 
             <p id="author"></p>
